# spotify-analyzer

./: .gitignore  README.md  pyproject.toml  spotify_analyzer.py
.cursor/rules/: repo.mdc
