[project]
name = "spotify-analyzer"
version = "1.0.0"
description = "Analyze a Spotify user's public playlists to find favorite songs, albums, and artists"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
spotify-analyzer = "spotify_analyzer:main"

